<resources>

    <string name="app_name">E-Kinerja Sidoarjo</string>

    <string name="logo_kabupaten_sidoarjo">Logo Kabupaten Sidoarjo</string>
    <string name="silahkan_login">Silahkan Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_kosong">Masukkan username</string>
    <string name="password_kosong">Masukkan password</string>

    <string name="loading">Loading…</string>

    <string name="jabatan_anda">Jabatan Anda</string>

    <string name="total_aktivitas_placeholder">%s%%</string>
    <string name="total_aktivitas_default">0%</string>
    <string name="capaian_aktivitas">Capaian Aktivitas Bulan %s</string>
    <string name="logo_profil">Logo profil</string>

    <string name="pemberitahuan">PEMBERITAHUAN</string>
    <string name="pemberitahuan_1">Pengisian aktivitas harian periode 01 – 07 terakhir pada tanggal 08</string>
    <string name="pemberitahuan_2">Pengisian aktivitas harian Periode 08 – 15 terakhir pada tanggal 16</string>
    <string name="pemberitahuan_3">Pengisian aktivitas harian Periode 16 – 22 terakhir pada tanggal 23</string>
    <string name="pemberitahuan_4">Pengisian aktivitas harian Periode 23 – %d terakhir pada tanggal 01 bulan berikutnya</string>

    <string name="input_aktivitas">Input Aktivitas</string>
    <string name="edit_aktivitas">Edit Aktivitas</string>

    <string name="tanggal">Tanggal</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="catatan">Catatan</string>
    <string name="nilai_aktivitas">Nilai Aktivitas</string>
    <string name="output">Output</string>
    <string name="satuan">Satuan (Lembar, kebijakan, dll)</string>
    <string name="durasi">Durasi</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="jam_berakhir">Jam Berakhir</string>
    <string name="simpan">Simpan</string>
    <string name="update">Update</string>

    <string name="penilai">Pejabat penilai kinerja</string>
    <string name="pegawai">Pegawai yang dinilai</string>
    <string name="nama">Nama</string>
    <string name="nip">NIP</string>
    <string name="jabatan">Jabatan</string>
    <string name="instansi">Instansi</string>
    <string name="print_aktivitas">Print Aktivitas</string>

    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="sudah_dinilai">Sudah dinilai</string>
    <string name="belum_dinilai">Belum dinilai</string>

    <string name="dashboard">Dashboard</string>
    <string name="tugas_aktivitas">Tugas Aktivitas</string>
    <string name="penilaian_aktivitas">Penilaian Aktivitas</string>
    <string name="laporan_aktivitas">Laporan Aktivitas</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>

    <string-array name="bulan">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <string-array name="tahun">
        <item>2021</item>
        <item>2022</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifikasi">Notifikasi</string>

</resources>