<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/tugasAktivitasFragment"
            android:icon="@drawable/ic_menu_tugas_aktivitas"
            android:title="@string/tugas_aktivitas" />
        <item
            android:id="@+id/laporanAktivitasFragment"
            android:icon="@drawable/ic_menu_laporan_aktivitas"
            android:title="@string/laporan_aktivitas" />
    </group>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/logout" />
</menu>