<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_tanggal_waktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="2022-10-27 • 08:00 - 09:00 ( 60 Menit )" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/tv_tanggal_waktu"
            app:layout_constraintBottom_toBottomOf="@id/tv_tanggal_waktu"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_ket_aktivitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/aktivitas"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal_waktu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_aktivitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_ket_aktivitas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Membuat surat pembinaan" />

        <TextView
            android:id="@+id/tv_ket_catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/catatan"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_aktivitas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/tv_ket_catatan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_ket_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/output"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/tv_catatan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_ket_output"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/yellow"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:visibility="gone"
            app:icon="@drawable/ic_btn_edit"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@id/tv_output"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_hapus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_hapus"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/red"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/hapus"
            android:textAllCaps="false"
            android:visibility="gone"
            app:icon="@drawable/ic_btn_hapus"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@id/tv_output"
            app:layout_constraintStart_toEndOf="@id/btn_edit"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_selengkapnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/selengkapnya"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_arrow_down_14"
            app:drawableTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/btn_hapus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>