<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.laporan_aktivitas.LaporanAktivitasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tl_penilai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_span="2"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/title_penilai"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/grey"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:background="@color/light_green"
                    android:text="@string/nama"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_nama_penilai"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:hint="@string/nama"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:background="@color/light_green"
                    android:text="@string/nip"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_nip_penilai"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:hint="@string/nip"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:background="@color/light_green"
                    android:text="@string/jabatan"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_jabatan_penilai"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:hint="@string/jabatan"
                    android:textColor="@color/black" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tl_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_penilai">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_span="2"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_pegawai"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:background="@color/light_green"
                    android:padding="10dp"
                    android:text="@string/nama"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_nama_pegawai"
                    android:hint="@string/nama"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:background="@color/light_green"
                    android:padding="10dp"
                    android:text="@string/nip"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_nip_pegawai"
                    android:hint="@string/nip"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:background="@color/light_green"
                    android:padding="10dp"
                    android:text="@string/jabatan"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_jabatan_pegawai"
                    android:hint="@string/jabatan"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:background="@color/light_green"
                    android:padding="10dp"
                    android:text="@string/instansi"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_instansi_pegawai"
                    android:hint="@string/instansi"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:textColor="@color/black" />

            </TableRow>

        </TableLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inp_tahun"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@id/inp_bulan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/edt_tahun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:inputType="none"
                    android:hint="@null"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inp_bulan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                app:hintEnabled="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/inp_tahun"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/edt_bulan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:inputType="none"
                    android:hint="@null"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_print_aktivitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/print_aktivitas"
            android:textAllCaps="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/blue"
            app:icon="@drawable/ic_btn_print"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@id/inp_bulan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_aktivitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_persentase"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="0 %" />

                <TextView
                    android:id="@+id/tv_aktivitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/aktivitas"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/tv_persentase"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tugas_aktivitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:overScrollMode="never"
            tools:listitem="@layout/item_laporan_aktivitas" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>